platform/security/base/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-latest-tag

spec:
  validationFailureAction: Audit

  background: true

  rules:

    - name: validate-image-tag

      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob

      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - flux-system

      validate:
        message: "Images must use a version tag and cannot use latest."

        pattern:
          spec:
            template:
              spec:
                containers:
                  - image: "!*:latest"
