platform/security/base/policies/require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-readonly-rootfs

spec:
  validationFailureAction: Audit

  background: true

  rules:

    - name: readonly-root-filesystem

      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet

      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - flux-system

      validate:
        message: "Containers must use a read-only root filesystem."

        pattern:
          spec:
            template:
              spec:
                containers:
                  - securityContext:
                      readOnlyRootFilesystem: true
